# Clock

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md
.devcontainer/Ubuntu-jammy/: Dockerfile
.devcontainer/Ubuntu-noble/: Dockerfile
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  docs.yml
cmake/: Atomic.cmake  CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: CMakeLists.txt  config.hpp.in
docs/: annotated.html  annotated_dup.js  classes.html  config_8cpp.html  config_8cpp.js  config_8cpp__incl.map  config_8cpp__incl.md5  config_8hpp.html  config_8hpp.js  config_8hpp__dep__incl.map  config_8hpp__dep__incl.md5  config_8hpp__incl.map  config_8hpp__incl.md5  config_8hpp_ab9fca62f51c653bc9056c2be6d0964e9_cgraph.md5  config_8hpp_ab9fca62f51c653bc9056c2be6d0964e9_icgraph.map  config_8hpp_source.html  date__time_8cpp.html  date__time_8cpp.js  date__time_8cpp__incl.map  date__time_8cpp__incl.md5  date__time_8hpp.html  date__time_8hpp.js  date__time_8hpp__dep__incl.map  date__time_8hpp__dep__incl.md5  date__time_8hpp__incl.map  date__time_8hpp__incl.md5  date__time_8hpp_a4fc1f49286717ca13e50c469038a6a3d_cgraph.map  date__time_8hpp_a4fc1f49286717ca13e50c469038a6a3d_cgraph.md5  date__time_8hpp_a4fc1f49286717ca13e50c469038a6a3d_icgraph.map  date__time_8hpp_a4fc1f49286717ca13e50c469038a6a3d_icgraph.md5  date__time_8hpp_afb72b2d440e3f250684c5acf170e22e5_cgraph.map  date__time_8hpp_afb72b2d440e3f250684c5acf170e22e5_cgraph.md5  date__time_8hpp_afb72b2d440e3f250684c5acf170e22e5_icgraph.map  date__time_8hpp_afb72b2d440e3f250684c5acf170e22e5_icgraph.md5  date__time_8hpp_source.html  dir_000005_000003.html  dir_000006_000004.html  dir_000007_000004.html  dir_000008_000003.html  dir_000008_000005.html  (+237 more)
docs/api/html/: __FORTIFY__SOURCE_8hpp_source.html  config_8hpp.html  config_8hpp__incl.map  config_8hpp__incl.md5  config_8hpp_ab9fca62f51c653bc9056c2be6d0964e9_cgraph.map  config_8hpp_ab9fca62f51c653bc9056c2be6d0964e9_icgraph.md5  config_8hpp_source.html  dir_000007_000004.html  dir_000008_000003.html  dir_018d0b5e4f6ecf2185e0b167e78aa410.js  dir_018d0b5e4f6ecf2185e0b167e78aa410_dep.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_1c77ce808913c67578b3b1b4102c6dd7.html  dir_1c77ce808913c67578b3b1b4102c6dd7_dep.map  dir_1c77ce808913c67578b3b1b4102c6dd7_dep.md5  dir_45447642641a679956fc1cf031832066.html  dir_45447642641a679956fc1cf031832066_dep.map  dir_647908920f66cdc6fc3bb8c71b453d62_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_91f360c7e671e243976a5bd5423aa6a8.html  dir_91f360c7e671e243976a5bd5423aa6a8.js  dir_91f360c7e671e243976a5bd5423aa6a8_dep.md5  dir_992428b7610d9779005418c1093dcd25_dep.md5  dir_a5bdbfbbaa7895161d62825676df7980.html  dir_a5bdbfbbaa7895161d62825676df7980.js  dir_b26d65765fe6a8be4d4feb153c2715dd.html  files.html  functions.html  functions_func.html  index.html  menudata.js  navtreedata.js  quad_8hpp_source.html  run__record_8hpp_source.html  structclk_1_1misc__lib_1_1DateTime.html  structclk_1_1misc__lib_1_1DateTime_a01d736f8e2fb0537bb0b94619c14a27f_icgraph.md5  structclk_1_1misc__lib_1_1DateTime_a24ca9963d82f1d8eee2abc048fd90b15_cgraph.map  structclk_1_1misc__lib_1_1DateTime_a24ca9963d82f1d8eee2abc048fd90b15_cgraph.md5  structclk_1_1misc__lib_1_1DateTime_a4014e2caac28d136ba7d692d8eac58e8_icgraph.md5  (+64 more)
docs/api/html/search/: all_11.js  all_3.js  all_5.js  all_6.js  all_9.js  all_b.js  all_f.js  classes_4.js  classes_5.js  enums_1.js  enumvalues_0.js  enumvalues_5.js  functions_0.js  functions_1.js  functions_12.js  functions_2.js  functions_3.js  functions_9.js  variables_0.js  variables_3.js  variables_5.js  variables_8.js  variables_9.js
docs/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_14.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_11.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+13 more)
examples/si3sim/: weekdays.json
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/Clock/: sample_library.hpp
include/Clock/misc_lib/: date_time.hpp  quad.hpp  run_record.hpp  time.hpp
include/Clock/si3_sim/: config.hpp  si3_sim.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/misc_lib/: CMakeLists.txt  date_time.cpp  quad.cpp  run_record.cpp  time.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/si3_sim/: CMakeLists.txt  config.cpp  main.cpp  si3_sim.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/misc_lib/: CMakeLists.txt  date_time_tests.cpp  time_tests.cpp
test/si3_sim/: CMakeLists.txt
